# lint-pdf

./: .deepsource.toml  .env.desktop-release.example  .gitignore  .mcp.json  .npmrc  .semgrep.yml  .semgrepignore  APPROVALS.md  AUDIT.md  CLAUDE.md  DEPLOYMENT-TRIGGER.md  Dockerfile  LICENSE  MIGRATION_AUDIT.md  PIXIE_DUST_PROMPT.md  Pantone_Complete_Library.xlsx  README.md  STYLE_GUIDE.md  docker-compose.e2e.yml  docker-compose.yml  lintpdf-v2-universe-enumeration.md  package.json  plan.md  pnpm-lock.yaml  preflight-stress-results.md  preflight-stress-smoke-metrics.csv  preflight-stress-smoke.md  pyproject.toml  railway.beat.toml  railway.control-plane.toml  railway.toml  railway.verapdf.toml  railway.worker-ai.toml  railway.worker-priority.toml  railway.worker-reports.toml  railway.worker-tiles.toml  railway.worker-webhooks.toml  railway.worker.toml  run_preflight.py  seed_and_serve.py  (+3 more)
.atlas/docs/: architecture.md  design-decisions.md  project.md
.atlas/playbooks/: build.md
.claude/: settings.json  settings.local.json
.cursor/rules/: pixie-dust.mdc  service-ownership.mdc
.githooks/: pre-commit  pre-push
.github/workflows/: ci.yml  deploy-similarity.yml  deploy.yml  desktop-release.yml  edge-caddy-deploy.yml  modal-deploy.yml  publish-pypi.yml  release.yml  security.yml
.thinkneverland/: ATLAS-CONTEXT.md  BUILD-PLAYBOOK.md  LINEAR-WORKFLOW-PLAYBOOK.md  PROJECT.md
.windsurf/rules/: pixie-dust.md  service-ownership.md
alembic/: env.py
alembic/versions/: 002_add_contact_email.py  005_add_ai_models.py  006_nautical_rebrand.py  007_add_color_models.py  013_add_brand_profiles.py  014_add_custom_report_domains.py  015_add_job_verdict_columns.py  018_approval_chains.py  019_preflight_imports.py  021_viewer_annotations.py  022_viewer_annotation_comments.py  028_webhook_deliveries.py  032_webhook_dead_letter.py  035_add_plan_limit_overrides.py  036_system_profiles_and_tenant_default.py  037_ai_features_and_usage.py  038_nullify_audit_rows.py  039_job_ocr_text_layer.py  040_job_packaging_fields.py  042_v07_toggles.py  052_job_structural_evidence.py  055_corpus_tables.py
audit/: grounded-scrub.md  phase-4-extraction-playbook.md  phase-4-stage-f-f1-corpus-urls.txt  phase-4-stage-f-f2-pws-urls.txt  phase-4-stage-f-smoke-results.md  saas-residual-modules.md  table-scopes.yaml  workflow-config-design.md
audit/branch-divergence/: 2026-04-26-50-local-commits-audit.md
audit/phase-0/: blast-radius-ai.json  blast-radius-ai.md  blast-radius.json  blast-radius.md  check-research-approach.md  existing-checks-summary.md  existing-checks.json  qa-resolutions.md  repo-inventory.md  test-baseline.txt
audit/phase-0-v2/: 0-bootstrap.md  0.1-repo-inventory.md  0.2-v1-v2-projection.json  0.2-v1-v2-projection.md  0.3-infrastructure-inventory.md  0.4-blast-radius.md  0.5-byo-readiness.md  0.6-viewer-infrastructure.md  0.7-config-cascade-audit.md  0.8-surface-parity.md  PHASE-0-COMPLETE.md  legacy-endpoints-removal-checklist.md
audit/phase-1/: backlog.json  check-names-additions.py.txt  filled-names-draft.json  gap-list.json  gap-mapping.json  phase-1-summary.md  refresh_mapping.py  unmapped-existing.md  unmapped-triage.md
audit/phase-1-v2/: 0-phase0-decisions.md  1.1-validation-notes.md  1.1b-corrections.md  PHASE-1-COMPLETE.md  backlog-summary.md  backlog.json  sequencing.md  unmapped-existing.json  unmapped-existing.md  v2-id-coverage-summary.md  v2-id-coverage.json  wave-v-design-handoff.md
audit/phase-2/: followups.md  sequencing-memo.md
audit/phase-2-v2/: 0-phase1-decisions.md
clamav/: railway.toml
components/: AnnotationCanvas.tsx  PageCanvas.tsx
docs/: ARCHITECTURE.md  CONTRIBUTING.md  DEPLOYMENT.md  EXTENDING.md  api.md  audit-phase1.md  import-schema.json  integrations.md  licensing.md  pdf-data-requirements.md  plugin-api.md  preflight-capability-map.md  preflight-engine-audit.md  rulesets.md  sdk-spec.md  security.md  service-ownership-contract.md
docs/audits/: 2026-04-23-preflight-opus-audit.md  2026-05-19-demo-workflow-audit.md  2026-05-19-vision-gap-audit.md  2026-05-20-vision-gap-audit.md  scoreboard.md
docs/examples/: README.md  acrobat-report.xml  callas-report.json  callas-report.xml  check-D-08-finding.json  check-D-09-finding.json  check-F-32-finding.json  check-P-30-finding.json  custom-mapping-json.json  (+10 more)
grounded-research/: 01-pdf-file-structure.md  02-pdf-object-model.md  03-content-streams-graphics-state.md  04-color-spaces.md  05-font-technology.md  06-images.md  07-08-transparency-overprint.md  09-10-11-conformance-standards.md  12-16-open-source-assessment.md  17-19-competitive-intelligence.md  20-test-corpus-assembly.md  README.md  implementation-plan.md  synthesis.md
host/: index.ts
icc/: Pantone_Complete_Library.csv
plugin/: services.ts
scripts/: AUDIT_WORKFLOW.md  README.md  audit-engine.py  audit-opus.py  audit_demo_workflow.py  audit_preflight_accuracy.py  audit_test_corpus.py  audit_vision_gaps.py  check_engine_purity.sh  check_migration_scope.py  check_openapi_descriptions.py  check_route_classification.py  desktop-release.sh  e2e-local.sh  e2e.sh  engine_purity_baseline.txt  enrich_pantone_reference.py  entrypoint.sh  export_check_catalog.py  full_api_sweep.py  generate_gwg_profiles.py  migration_scope_baseline.txt  parser_surface_audit.py  patch-pd-config-exports.js  phase4-investigate.sh  replay_audit_dataset.py  route_classification_baseline.txt  run-preflight.sh  seed_pws_demo.py  seed_test_data.py  smoke-preflight-batch.sh  smoke-preflight-v2.sh  stress_preflight_folder.py  test_endpoints.py  test_preflight.py
tests/: conftest.py  criterion4_parity_validation.json  test_cli_codex_cluster.py  test_codex_adapter_analysis.py  test_codex_client.py  test_codex_client_routing.py  test_codex_image_resolution.py  test_codex_signals_readers.py  test_codex_summary.py  test_config.py  test_e2e_api.py  test_email_service.py  test_middleware.py  test_pantone_cache.py  test_preflight_smoke.py  test_reports_engine.py  test_scaffold.py  test_worker.py  test_xml_report.py
tools/: generate_postman.py
verapdf/: railway.toml
(+1132 files in other folders)
